# sozip-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
design/: sozip-rust-scoping.md
src/: archive.rs  error.rs  index.rs  lib.rs  reader.rs
tests/: foo_zip.rs
